# ___blog

./: .gitignore  README.md  build.ml  dune  dune-project  index.html  index.md  main.css  main.js  pf-blog.opam  pf-blog.opam.template  root.js
.github/workflows/: deploy.yml  test.yml
blogs/: well-typed-stack.md
doc/learning/: nix.html
docs/: index.html
docs/css/: main.css
docs/learning/: nix.html
learning/: nix.md
posts/: index.html
posts/riscv/: index.html  index.md
posts/riscv/diagrams/: btype.txt  instr.txt
public/: index.html  main.css  main.js  root.js
public/posts/: index.html
src/: dune  main.ml
src/js/: main.ml  theme.ml
